recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: ';' expected but ',' found.
                case steps => current(steps); avance(length), droite(angle); tree(steps-1,shrink*length,angle,shrink);gauche(angle);gauche(angle);tree(steps-1,shrink*length,angle,shrink);current(steps);recule(length);
                                                            ^